<resources>
    <string name="app_name">Summer Internship 2022 Tv Tracker</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="verify_password">Verify Password</string>
    <string name="register_here">Register Here!</string>
    <string name="don_t_have_an_account">Don t have an account ?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_to_favorite">Add to Favorite</string>
</resources>