<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/netflixbackk"
    tools:context=".register.UI.RegisterActivity">

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="30dp"
        android:background="#1C1818"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColor="#8E2D2D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="59dp"
        android:layout_marginTop="24dp"
        android:background="#1C1818"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#8E2D2D"
        app:layout_constraintEnd_toEndOf="@+id/editTextName"
        app:layout_constraintStart_toStartOf="@+id/editTextName"
        app:layout_constraintTop_toBottomOf="@id/editTextName" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="59dp"
        android:layout_marginTop="24dp"
        android:background="#1C1818"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#8E2D2D"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
        app:layout_constraintStart_toStartOf="@+id/editTextEmail"
        app:layout_constraintTop_toBottomOf="@id/editTextEmail" />

    <EditText
        android:id="@+id/editTextVerifyPassword"
        android:layout_width="0dp"
        android:layout_height="59dp"
        android:layout_marginTop="24dp"
        android:background="#1C1818"
        android:hint="@string/verify_password"
        android:inputType="textPassword"
        android:textColor="#8E2D2D"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:padding="16dp"
        android:layout_height="60dp"
        android:backgroundTint="#1C1818"
        android:fontFamily="sans-serif-black"
        android:text="@string/register"
        android:textColor="#8E2D2D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextVerifyPassword"
        app:layout_constraintVertical_bias="0.2" />
</androidx.constraintlayout.widget.ConstraintLayout>